2015-02-12  Natalia Portillo  <claunia@claunia.com>

	* Interop/Apple/Interop.Apple.Errors.cs:
	  Added all errors defined by BSD layer of OS X.

	* Tests/Interop.Apple.cs:
	  Added tests for Apple's stat() and stat64()

	* packages.config:
	  Added NUnit to do tests.

	* Claunia.IO.csproj:
	  Added tests

	* Interop/Apple/Interop.Apple.stat.cs:
	  Mono calls stat with 32-bit inode, modify structure and add
	  stat64() call.

	* Interop/Apple/Interop.Apple.types.cs:
	  Pack structure, dunno if needed

2015-02-12  Natalia Portillo  <claunia@claunia.com>

	* Claunia.IO.csproj:
	* Interop/Apple/Interop.Apple.stat.cs:
	* Interop/Apple/Interop.Apple.types.cs:
	* Interop/Apple/Interop.Apple.Libraries.cs:
	  Interoped OS X stat(2)

2015-02-11  Natalia Portillo  <claunia@claunia.com>

	* AppleEnums.cs:
	* AppleStructs.cs:
	* Claunia.IO.csproj:
	  Added FinderInfo and FinderFlags for Apple systems.

	* FileInfo.cs:
	* DirectoryInfo.cs:
	* FileSystemInfo.cs:
	  Added FileSystemInfo class

2015-02-08  Natalia Portillo  <claunia@claunia.com>

	* FileInfo.cs:
	* DirectoryInfo.cs:
	  Remove sporious Using statements, and formatted.

2015-02-08  Natalia Portillo  <claunia@claunia.com>

	* DirectoryInfo.cs:
	  Created DirectoryInfo class that cheats to inherint
	  System.IO.DirectoryInfo

	* FileInfo.cs:
	  Created FileInfo class that cheats to inherint
	  System.IO.FileInfo

	* Claunia.IO.csproj:
	  Removed skeleton empty class and added DirectoryInfo and
	  FileInfo classes.

2015-02-08  Natalia Portillo  <claunia@claunia.com>

	* DirectoryInfo.cs:
	  Created FileInfo class that cheats to inherint
	  System.IO.DirectoryInfo

	* FileInfo.cs:
	  Created FileInfo class that cheats to inherint
	  System.IO.FileInfo

	* Claunia.IO.csproj:
	  Removed skeleton class and added FileInfo and DirectoryInfo
	  classes.

	* MyClass.cs:
	  Removed skeleton empty class
